[tool.poetry]
name = "seminars"
version = "0.1.0"
description = "GEEM lab group seminars"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
