[tool.poetry]
name = "seminars"
version = "0.1.0"
description = "GEEM lab group seminars"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>", "Letícia Maria Pequeno Madureira <leticiapequeno30@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
Markdown = "^3.3.6"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
grip = "^4.6.0"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.942"
isort = "^5.10.1"
types-dateparser = "^1.1.0"
types-requests = "^2.27.16"
types-Markdown = "^3.3.12"
prospector = "^1.7.7"
flynt = "^0.76"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
